<?xml version="1.0" encoding="utf-8"?>

<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  android:id="@+id/GPS_page">

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="0.80"
    android:background="#ffffff" >

<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".GPS" 
	android:background="#ffffff" >


    <TextView
        android:id="@+id/label_latlng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latlng"
        android:textSize="22sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/latlng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/label_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="22sp"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" 
        android:textColor="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/start_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="160sp"
            android:onClick="startDistanceAdder"
            android:text="@string/start_run" />

        <Button
            android:id="@+id/stop_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="160sp"
            android:onClick="stopDistanceAdder"
            android:text="@string/stop_run" />
    </LinearLayout>

    <TextView
        android:id="@+id/label_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/distance"
        android:textSize="22sp" 
        android:textColor="#000000" />

    <TextView
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp" 
        android:textColor="#000000" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="time:"
        android:textSize="20sp" 
        android:textColor="#000000" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="28sp" 
        android:textColor="#000000" />

</LinearLayout>

<CheckBox
        android:id="@+id/Treadmill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
        android:padding="10dip"
        android:text="Treadmill"
        android:onClick="onTreadmillChecked"
        android:textSize="25dip" />

</RelativeLayout>
</ScrollView>
